# AmazonTemplate2

./: CMakeLists.txt  main.cpp
gui/: DialogAddMapping.cpp  DialogAddMapping.h  DialogAddMapping.ui  DialogExtractInfos.cpp  DialogExtractInfos.h  DialogExtractInfos.ui  DialogFillAiPrompts.cpp  DialogFillAiPrompts.h  DialogFillAiPrompts.ui  DialogPossibleValues.cpp  DialogPossibleValues.h  DialogPossibleValues.ui  DialogReviewAiDesc.cpp  DialogReviewAiDesc.h  DialogReviewAiDesc.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  WidgetAdDescription.cpp  WidgetAdDescription.h  WidgetAdDescription.ui  gui.cmake
model/: ColMapping.cpp  ColMapping.h  ExceptionTemplateError.cpp  ExceptionTemplateError.h  FileModelSources.cpp  FileModelSources.h  FileModelToFill.cpp  FileModelToFill.h  GptFiller.cpp  GptFiller.h  JsonReplyAbstract.cpp  JsonReplyAbstract.h  JsonReplyAiDescription.cpp  JsonReplyAiDescription.h  JsonReplyDescBullets.cpp  JsonReplyDescBullets.h  JsonReplySelect.cpp  JsonReplySelect.h  JsonReplyText.cpp  JsonReplyText.h  JsonReplyTitles.cpp  JsonReplyTitles.h  JsonReplyTransBullets.cpp  JsonReplyTransBullets.h  PromptInfo.h  SkuInfo.h  TableInfoExtractor.cpp  TableInfoExtractor.h  TemplateMerger.cpp  TemplateMerger.h  TemplateMergerFiller.cpp  TemplateMergerFiller.h  model.cmake
